--- a/de.uniol.inf.is.odysseus.slf4j/build.properties
+++ b/de.uniol.inf.is.odysseus.slf4j/build.properties
@@ -8,5 +8,8 @@ bin.includes = META-INF/,\
                log4j2.file.debug.xml,\
                log4j2.file.trace.xml,\
                log4j2.file.xml,\
-               lib/log4j-slf4j18-impl-2.14.1.jar
+               lib/log4j-api-2.15.0.jar,\
+               lib/log4j-core-2.15.0.jar,\
+               lib/log4j-slf4j18-impl-2.15.0.jar,\
+               lib/log4j-slf4j-impl-2.15.0.jar
 source.. = src/
